Fix notes and revise modeling

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -52,7 +52,7 @@
 
 \newacronym[longplural=mercados intradiarios continuos]{mic}{MIC}{mercado intradiario continuo}
 
-\newacronym[longplural=programaciónes lineales de enteros mixtos]{milp}{MILP}{programación lineal de enteros mixtos}
+\newacronym[longplural=programaciónes lineales de enteros mixta]{milp}{MILP}{programación lineal de enteros mixta}
 
 \newacronym[longplural=operadores del mercado]{mo}{MO}{operador del mercado}
 
