--- a/chapter4.tex
+++ b/chapter4.tex
@@ -203,7 +203,7 @@ El formato de los datos de precios contiene las columnas fecha, hora y precio en
   \label{fig:contenido-precio}
 \end{figure}
 
-El desarrollo gestiona correctamente los husos horarios en horario local, ya que el mercado diario dispone de 24 periodos de granularidad horaria, pero puede tener 23 o 25 en días con cambio de hora\footnote{El mercado diario está en proceso de ser actualizado a una granularidad cuartohoraria.}. Análogamente, los mercados intradiarios, con granularidad cuartohoraria, tienen por lo general 96 periodos, con opción de 92 y 100. Esto es debido a que el funcionamiento de los mercados siempre se realiza en horario local, sin excepción, para que no existan conflictos de solapamiento entre ellos~\cite{omie2025reglas}.
+El desarrollo gestiona correctamente los hhusos horarios en horario local, ya que el mercado diario dispone de 24 periodos de granularidad horaria, pero puede tener 23 o 25 en días con cambio de hora\footnote{El mercado diario está en proceso de ser actualizado a una granularidad cuartohoraria.}. Análogamente, los mercados intradiarios, con granularidad cuartohoraria, tienen por lo general 96 periodos, con opción de 92 y 100. Esto es debido a que el funcionamiento de los mercados siempre se realiza en horario local, sin excepción, para que no existan conflictos de solapamiento entre ellos~\cite{omie2025reglas}.
 
 El fichero de energía negociada contiene las columnas UP, fecha, hora y energía en megavatios hora. De esta forma, la presencia de la \gls{up} es la razón fundamental del carácter confidencial de estos datos. Si un agente conociera los movimientos de las unidades que no controla, podría adaptar su estrategia en detrimento de la libre competencia, según la tabla~\ref{tab:descripción-energia} y el contenido de la figura~\ref{fig:contenido-energia}.
 
