--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,14 @@
   note   = {Accedido: 2025-09-05}
 }
 
+@misc{apple2025batteries,
+  title  = {¿Por qué iones de litio?},
+  author = {Apple},
+  url    = {https://www.apple.com/es/batteries/why-lithium-ion/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
+}
+
 @misc{aveva2025aveva,
   title  = {AVEVA PI System},
   author = {AVEVA},
@@ -485,6 +493,14 @@
   pages        = {119--131},
   year         = {2019},
   organization = {Atlantis Press}
+}
+
+@misc{pyomo2025optimization,
+  title  = {Pyomo: Python-based open-source optimization modeling language},
+  author = {Pyomo Development Team},
+  url    = {https://www.pyomo.org/},
+  year   = {2025},
+  note   = {Accessed: 2025-09-05}
 }
 
 @article{rancilio2022revenue,
